# service/api/api-handler.go
@@ -15,8 +15,8 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/users/:username/stream", rt.wrap(rt.getStream))
 	rt.router.DELETE("/users/:username/photos/:photoId", rt.wrap(rt.deletePhoto))
 	rt.router.GET("/users/:username/photos/:photoId", rt.wrap(rt.getPhoto))
-	rt.router.GET("/users/:username/photos/:photoId/comments", rt.wrap(rt.getComments))
-	rt.router.POST("/users/:username/photos/:photoId/comments", rt.wrap(rt.createComment))
+	rt.router.GET("/users/:username/photos/:photoId/comments/", rt.wrap(rt.getComments))
+	rt.router.POST("/users/:username/photos/:photoId/comments/", rt.wrap(rt.createComment))
 	rt.router.DELETE("/users/:username/photos/:photoId/comments/:commentId", rt.wrap(rt.deleteComment))
 	rt.router.GET("/users/:username/photos/:photoId/likes", rt.wrap(rt.getLikes))
 	rt.router.PUT("/users/:username/photos/:photoId/likes/:userId", rt.wrap(rt.updateLike))
